--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -12,24 +13,32 @@
 
   <body>
     <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "home", root_path %>
-        </li>
-        <li>
-          <%= link_to "about", about_path %>
-        </li>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-      <% end %>
+      <nav class="navbar navbar-dark bg-dark">
+        <% if user_signed_in? %>
+          <a class="navbar-brand" href="/">Bookers</a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            </li>
+          </ul>
+        <% else %>
+          <a class="navbar-brand" href="/">Bookers</a>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <%= link_to "home", root_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "about", about_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "ログイン", new_user_session_path, class: 'nav-link' %>
+            </li>
+          </ul>
+        <% end %>
+      </nav>
     </header>
     <%= yield %>
   </body>
