--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,31 +13,47 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-dark bg-dark">
-        <% if user_signed_in? %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
           <a class="navbar-brand" href="/">Bookers</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            </li>
-          </ul>
-        <% else %>
-          <a class="navbar-brand" href="/">Bookers</a>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <%= link_to "home", root_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "about", about_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "ログイン", new_user_session_path, class: 'nav-link' %>
-            </li>
-          </ul>
-        <% end %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-white' %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to root_path, class: 'nav-link text-white' do %>
+                  <i class="fas fa-home" style="color: #ffffff;"></i>
+                  Home
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to about_path, class: 'nav-link text-white' do %>
+                  <i class="fas fa-link" style="color: #ffffff;"></i>
+                  About
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_user_registration_path, class: 'nav-link text-white' do %>
+                  <i class="fas fa-user-plus" style="color: #ffffff;"></i>
+                  Sign up
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_user_session_path, class: 'nav-link text-white' do %>
+                  <i class="fas fa-sign-in-alt" style="color: #ffffff;"></i>
+                  Log in
+                <% end %>
+              </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
     <%= yield %>
