[Add]ユーザー詳細、編集画面

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
       <tr>
         <td><%= image_tag 'sample-author1.jpg' %></td>
         <td>
-          <%= link_to book.title, "/books/#{book.id}" %>
+          <%= link_to book.title, book_path(book.id) %>
         </td>
         <td><%= book.body %></td>
       </tr>
