--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,7 +8,7 @@
   <% @books.each do |book| %>
     <tbody>
       <tr>
-        <td><%= image_tag 'sample-author1.jpg' %></td>
+        <td><%= image_tag book.user.get_profile_image(80,80) %></td>
         <td>
           <%= link_to book.title, book_path(book.id) %>
         </td>
