--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>User info</h1>
+
+<h1>New book</h1>
+
+<h1>Users</h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th>image</th><th>name</th><th></th>
+    </tr>
+  </thead>
+  <% @users.each do |user| %>
+    <tbody>
+      <tr>
+        <td><%= image_tag 'sample-author1.jpg' %></td>
+        <td>
+          <%= user.name %>
+        </td>
+        <td><%= link_to "Show", user_path(user.id) %></td>
+      </tr>
+    </tbody>
+  <% end %>
+</table>
