--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,40 @@
-<h1>User info</h1>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>User info</h1>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+        <tr>
+          <th>name</th><td><%= @user.name %></td>
+        </tr>
+        <tr>
+          <th>introduction</th><td><%= @user.self_introduction %></td>
+        </tr>
+      </table>
+        <%= link_to edit_user_path(@user.id), class:'btn btn-outline-secondary btn-block' do %>
+          <i class="fas fa-user-cog"></i>
+        <% end %>
+    </div>
 
-
-
-<h1>Books</h1>
-<table class="table">
-  <% @book.each do |book| %>
-  <tbody>
-    <tr>
-      <td>
-        <%= image_tag 'sample-author1.jpg' %>
-      </td>
-      <td>
-        <%= link_to book.title, book_path(book.id)  %>
-      </td>
-      <td>
-        <%= book.body %>
-      </td>
-    </tr>
-  </tbody>
-  <% end %>
-</table>
+    <div class="col-md-8 offset-md-1">
+      <h1>Books</h1>
+      <table class="table">
+        <% @book.each do |book| %>
+        <tbody>
+          <tr>
+            <td>
+              <%= image_tag @user.get_profile_image(100,100) %>
+            </td>
+            <td>
+              <%= link_to book.title, book_path(book.id)  %>
+            </td>
+            <td>
+              <%= book.body %>
+            </td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
