[Add]ユーザー一覧、投稿一覧、ユーザー詳細ページレイアウト

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,56 @@
-<h1>Book detail</h1>
-<table class="table">
-  <tbody>
-    <tr>
-      <td>
-        <%= image_tag 'sample-author1.jpg' %><br>
-        name
-      </td>
-      <td><%= @book.title %></td>
-      <td><%= @book.body %></td>
-    </tr>
-  </tbody>
-</table>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag @books.user.get_profile_image(100,100) %>
+      <table class="table">
+        <tr>
+          <th>name</th><td><%= @books.user.name %></td>
+        </tr>
+        <tr>
+          <th>introduction</th><td><%= @books.user.self_introduction %></td>
+        </tr>
+      </table>
+      <%= link_to edit_user_path(@books.user.id), class:'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
+
+      <h2>New book</h2>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label>Title</label>
+        <%= f.text_field :title, class:"form-control" %>
+      </div>
+
+      <div class="form-group">
+        <label>Opinion</label>
+        <%= f.text_area :body, class:"form-control" %>
+      </div>
+
+        <%= f.submit 'Create Book', class:"btn btn-success" %>
+      <% end %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table">
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(@books.user.id) do %>
+                <%= image_tag @books.user.get_profile_image(80,80) %><br>
+                <%= @books.user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to @books.title, book_path(@books.id)  %>
+            </td>
+            <td>
+              <%= @books.body %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
