--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,30 +1,60 @@
-<h1>Books</h1>
-<table class="table">
-  <thead>
-    <tr>
-      <th></th><th>Title</th><th>Opinion</th>
-    </tr>
-  </thead>
-  <% @books.each do |book| %>
-    <tbody>
-      <tr>
-        <td><%= image_tag book.user.get_profile_image(80,80) %></td>
-        <td>
-          <%= link_to book.title, book_path(book.id) %>
-        </td>
-        <td><%= book.body %></td>
-      </tr>
-    </tbody>
-  <% end %>
-</table>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag current_user.get_profile_image(100,100) %>
+      <table class="table">
+        <tr>
+          <th>name</th><td><%= current_user.name %></td>
+        </tr>
+        <tr>
+          <th>introduction</th><td><%= current_user.self_introduction %></td>
+        </tr>
+      </table>
+      <%= link_to edit_user_path(current_user.id), class:'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
 
-<h1>New book</h1>
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+      <h2>New book</h2>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label>Title</label>
+        <%= f.text_field :title, class:"form-control" %>
+      </div>
 
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
+      <div class="form-group">
+        <label>Opinion</label>
+        <%= f.text_area :body, class:"form-control" %>
+      </div>
 
-  <%= f.submit 'Create Book' %>
-<% end %>
+        <%= f.submit 'Create Book', class:"btn btn-success" %>
+      <% end %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th><th>Title</th><th>Opinion</th>
+          </tr>
+        </thead>
+        <% @books.each do |book| %>
+          <tbody>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user.id) do %>
+                  <%= image_tag book.user.get_profile_image(80,80) %>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to book.title, book_path(book.id) %>
+              </td>
+              <td><%= book.body %></td>
+            </tr>
+          </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
