--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,56 @@
-<h1>User info</h1>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= image_tag current_user.get_profile_image(100,100) %>
+      <table class="table">
+        <tr>
+          <th>name</th><td><%= current_user.name %></td>
+        </tr>
+        <tr>
+          <th>introduction</th><td><%= current_user.self_introduction %></td>
+        </tr>
+      </table>
+      <%= link_to edit_user_path(current_user.id), class:'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
 
-<h1>New book</h1>
+      <h2>New book</h2>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label>Title</label>
+        <%= f.text_field :title, class:"form-control" %>
+      </div>
 
-<h1>Users</h1>
-<table class="table">
-  <thead>
-    <tr>
-      <th>image</th><th>name</th><th></th>
-    </tr>
-  </thead>
-  <% @users.each do |user| %>
-    <tbody>
-      <tr>
-        <td><%= image_tag 'sample-author1.jpg' %></td>
-        <td>
-          <%= user.name %>
-        </td>
-        <td><%= link_to "Show", user_path(user.id) %></td>
-      </tr>
-    </tbody>
-  <% end %>
-</table>
+      <div class="form-group">
+        <label>Opinion</label>
+        <%= f.text_area :body, class:"form-control" %>
+      </div>
+
+        <%= f.submit 'Create Book', class:"btn btn-success" %>
+      <% end %>
+    </div>
+
+    <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>image</th><th>name</th><th></th>
+          </tr>
+        </thead>
+        <% @users.each do |user| %>
+          <tbody>
+            <tr>
+              <td><%= image_tag user.get_profile_image(80,80) %></td>
+              <td>
+                <%= user.name %>
+              </td>
+              <td><%= link_to "Show", user_path(user.id) %></td>
+            </tr>
+          </tbody>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
