--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,46 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <h1>User info</h1>
-      <%= image_tag @user.get_profile_image(100,100) %>
+      <h2>User info</h2>
+      <%= image_tag current_user.get_profile_image(100,100) %>
       <table class="table">
         <tr>
-          <th>name</th><td><%= @user.name %></td>
+          <th>name</th><td><%= current_user.name %></td>
         </tr>
         <tr>
-          <th>introduction</th><td><%= @user.self_introduction %></td>
+          <th>introduction</th><td><%= current_user.self_introduction %></td>
         </tr>
       </table>
-        <%= link_to edit_user_path(@user.id), class:'btn btn-outline-secondary btn-block' do %>
-          <i class="fas fa-user-cog"></i>
-        <% end %>
+      <%= link_to edit_user_path(current_user.id), class:'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
+
+      <h2>New book</h2>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label>Title</label>
+        <%= f.text_field :title, class:"form-control" %>
+      </div>
+
+      <div class="form-group">
+        <label>Opinion</label>
+        <%= f.text_area :body, class:"form-control" %>
+      </div>
+
+        <%= f.submit 'Create Book', class:"btn btn-success" %>
+      <% end %>
     </div>
 
     <div class="col-md-8 offset-md-1">
-      <h1>Books</h1>
+      <h2>Books</h2>
       <table class="table">
-        <% @book.each do |book| %>
+        <% @books.each do |book| %>
         <tbody>
           <tr>
             <td>
-              <%= image_tag @user.get_profile_image(100,100) %>
+              <%= link_to user_path(book.user.id) do %>
+                <%= image_tag @user.get_profile_image(80,80) %>
+              <% end %>
             </td>
             <td>
               <%= link_to book.title, book_path(book.id)  %>
