[Add]レイアウト、バリデーション

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,20 +15,7 @@
         <i class="fas fa-user-cog"></i>
       <% end %>
 
-      <h2>New book</h2>
-      <%= form_with model: @book do |f| %>
-      <div class="form-group">
-        <label>Title</label>
-        <%= f.text_field :title, class:"form-control" %>
-      </div>
-
-      <div class="form-group">
-        <label>Opinion</label>
-        <%= f.text_area :body, class:"form-control" %>
-      </div>
-
-        <%= f.submit 'Create Book', class:"btn btn-success" %>
-      <% end %>
+      <%= render 'list', book: @book %>
     </div>
 
     <div class="col-md-8 offset-md-1">
@@ -47,6 +34,20 @@
             </td>
             <td>
               <%= @books.body %>
+            </td>
+            <td>
+              <% if @books.user == current_user %>
+                <%= link_to edit_book_path(@books.id), class:"btn btn-success btn-sm" do %>
+                  Edit
+                <% end %>
+              <% end %>
+            </td>
+            <td>
+              <% if @books.user == current_user %>
+                <%= link_to book_path(@books.id), method: :delete, "data-confirm" => "本当に消しますか？", class:"btn btn-danger btn-sm" do %>
+                  Destroy
+                <% end %>
+              <% end %>
             </td>
           </tr>
         </tbody>
