--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,20 +15,7 @@
         <i class="fas fa-user-cog"></i>
       <% end %>
 
-      <h2>New book</h2>
-      <%= form_with model: @book do |f| %>
-      <div class="form-group">
-        <label>Title</label>
-        <%= f.text_field :title, class:"form-control" %>
-      </div>
-
-      <div class="form-group">
-        <label>Opinion</label>
-        <%= f.text_area :body, class:"form-control" %>
-      </div>
-
-        <%= f.submit 'Create Book', class:"btn btn-success" %>
-      <% end %>
+      <%= render 'list', book: @book %>
     </div>
 
     <div class="col-md-8 offset-md-1">
