--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,32 @@
-<h1>User info</h1>
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">Image</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <label for="userIntroduction">Introduction</label>
-  <%= f.text_area :self_introduction, autofocus: true, id:"userIntroduction" %>
-  <%= f.submit "Update User" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
 
+      <% if @user.errors.any? %>
+      <h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3>
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+      <% end %>
+
+      <%= form_with model: @user do |f| %>
+      <div class="form-group">
+        <label for="inputName">Name</label>
+        <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class:"form-control" %>
+      </div>
+      <div class="form-group">
+        <label for="inputImage">Image</label>
+        <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*", class:"form-control-file" %>
+      </div>
+      <div class="form-group">
+        <label for="userIntroduction">Introduction</label>
+        <%= f.text_area :self_introduction, autofocus: true, id:"userIntroduction", class:"form-control" %>
+      </div>
+        <%= f.submit "Update User", class:"btn btn-secondary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
