[Add]フラッシュメッセージ、制限

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,6 +77,11 @@
         </div>
       </nav>
     </header>
+
+    <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+
     <%= yield %>
     <footer>
       <div class="container mt-5">
