--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,16 @@
 <div class="container px-5 px-sm-0">
+
+  <div>
+    <% if @book.errors.any? %>
+    <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+  </div>
+
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
