--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,7 +20,7 @@
           <th>name</th><td><%= current_user.name %></td>
         </tr>
         <tr>
-          <th>introduction</th><td><%= current_user.self_introduction %></td>
+          <th>introduction</th><td><%= current_user.introduction %></td>
         </tr>
       </table>
       <%= link_to edit_user_path(current_user.id), class:'btn btn-outline-secondary btn-block' do %>
