--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to root_path, class: 'nav-link text-white' do %>
+                <%= link_to user_path(current_user.id), class: 'nav-link text-white' do %>
                   <i class="fas fa-home" style="color: #ffffff;"></i>
                   Home
                 <% end %>
