--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
       </div>
       <div class="form-group">
         <label for="userIntroduction">Introduction</label>
-        <%= f.text_area :self_introduction, autofocus: true, id:"userIntroduction", class:"form-control" %>
+        <%= f.text_area :introduction, autofocus: true, id:"userIntroduction", class:"form-control" %>
       </div>
         <%= f.submit "Update User", class:"btn btn-secondary" %>
       <% end %>
